--- a/src/app/admin/awb-stock/dialog/add-awb-issue/add-awb-issue.component.html
+++ b/src/app/admin/awb-stock/dialog/add-awb-issue/add-awb-issue.component.html
@@ -121,7 +121,7 @@
                     <div class="col-md-4 col-sm-4 mb-2">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Quantity</mat-label>
-                            <input matInput formControlName="quantity" type="number">
+                            <input matInput min="1" formControlName="quantity" type="number">
                             <mat-error *ngIf="formdata.get('quantity').hasError('required')">
                                 Quantity is required
                             </mat-error>
@@ -130,7 +130,7 @@
                     <div class="col-md-4 col-sm-4 mb-2">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>End No</mat-label>
-                            <input matInput formControlName="endno" type="number" [readonly]="true">
+                            <input matInput formControlName="endno" type="number" [disabled]="true">
                             <mat-error *ngIf="formdata.get('endno').hasError('required')">
                                 End No is required
                             </mat-error>
@@ -139,7 +139,7 @@
                     <div class="col-md-4 col-sm-4 mb-2">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Rate</mat-label>
-                            <input matInput formControlName="rate" type="number" [min]="minrate">
+                            <input matInput min="1" formControlName="rate" type="number" [min]="minrate">
                             <mat-error *ngIf="formdata.get('rate').hasError('required')">
                                 Rate No is required
                             </mat-error>
