--- a/src/app/admin/awb-stock/dialog/add-awb-purchase/add-awb-purchase.component.html
+++ b/src/app/admin/awb-stock/dialog/add-awb-purchase/add-awb-purchase.component.html
@@ -81,7 +81,7 @@
                 <div class="col-md-6 col-sm-6 mb-2">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Vendor Rate</mat-label>
-                        <input matInput formControlName="vendorrate" type="number">
+                        <input min="1" matInput formControlName="vendorrate" type="number">
                         <mat-error *ngIf="formdata.get('vendorrate').hasError('required')">
                             Vendor Rate is required
                         </mat-error>
@@ -106,7 +106,7 @@
                 <div class="col-md-6 col-sm-6 mb-2">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Quantity</mat-label>
-                        <input matInput formControlName="quantity" type="number">
+                        <input min="1" matInput formControlName="quantity" type="number">
                         <mat-error *ngIf="formdata.get('quantity').hasError('required')">
                             Quantity is required
                         </mat-error>
@@ -117,7 +117,7 @@
                 <div class="col-md-6 col-sm-6 mb-2">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Starting No</mat-label>
-                        <input matInput formControlName="startingno" type="number">
+                        <input min="1" matInput formControlName="startingno" type="number">
                         <mat-error *ngIf="formdata.get('startingno').hasError('required')">
                             Starting No is required
                         </mat-error>
